# tennis-tasks

./: .gitignore  Makefile  manage.py  pyproject.toml  setup.cfg
tenis_tasks/: asgi.py  forms.py  settings.py  urls.py  views.py  wsgi.py
tenis_tasks/templates/: 404.html  base.html  index.html
