[tool.poetry]
name = "tennis-tasks"
version = "0.1.0"
description = ""
authors = ["KsyushaKI <oksanaakadem39@gmail.com>"]
readme = "README.md"
packages = [{include = "tenis_tasks"}]

[tool.poetry.dependencies]
python = ">=3.10"
django = "^4.2.6"
gunicorn = "^21.2.0"
python-dotenv = "^1.0.0"
django-bootstrap4 = "^23.2"
pydub = "^0.25.1"
gtts = "^2.4.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
